--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@solana/web3.js": "^1.60.0",
     "bs58": "^5.0.0",
+    "buffer": "^6.0.3",
     "buffer-es6": "^4.9.3",
     "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
